--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" type="text/css" href="dist/components/sidebar.css">
   <link rel="stylesheet" type="text/css" href="dist/components/transition.css">
 
-  <link rel="stylesheet" type="text/css" href="Home_Page.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="icon" href="images/VSL_LOGO.png">
 
   <script src="assets/library/jquery.min.js"></script>
@@ -88,7 +88,7 @@
 <!-- Page Contents -->
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment" style="padding-top:0em;">
-    <a href="Home_Page.html"><img src="images/VSLOGO2.png" class="logo"></a>
+    <a href="index.html"><img src="images/VSLOGO2.png" class="logo"></a>
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
         <a class="toc item" style="margin-left: 10em;">
