--- a/About_Us.html
+++ b/About_Us.html
@@ -318,7 +318,7 @@
         </div>
         <div class="column">
           <h3>Rước Lễ</h3>
-          <p><img src="images/Communion.png" alt="Chalice"></p>
+          <p><img src="images/communion.png" alt="Chalice"></p>
         </div>
         <div class="column">
           <h3>Hy Sinh</h3>
