--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <button class="accordion">Registration Form</button>
             <div class="panel">
               <br>
-                <li style="text-align:left; font-size:1.25em;">View <a href="Don-Dang-Ky-Registration.pfd" target="_blank">form</a></li><br>
-                <li style="text-align:left; font-size:1.25em;">Download <a href="Don-Dang-Ky-Registration.pfd" download>here</a></li>
+                <li style="text-align:left; font-size:1.25em;">View <a href="Don-Dang-Ky-Registration.pdf" target="_blank">form</a></li><br>
+                <li style="text-align:left; font-size:1.25em;">Download <a href="Don-Dang-Ky-Registration.pdf" download>here</a></li>
               <br>
             </div>
 
