fixed Contact page

--- a/Contacts.html
+++ b/Contacts.html
@@ -114,7 +114,7 @@
         </a>
         <br></br>
         <a href="#popup1">
-          <img onclick="myHuynhTruong(2)" src="images/HT-boi.png" alt="Đoàn Trưởng" class="ui avatar image">
+          <img onclick="myHuynhTruong(2)" src="images/HT-gurl.png" alt="Đoàn Trưởng" class="ui avatar image">
         </a>
         <a href="#popup1">
           <img onclick="myHuynhTruong(3)" src="images/HT-gurl.png" alt="Đoàn Phó Quảng Trị" class="ui avatar image">
@@ -162,19 +162,54 @@
                     "Trưởng Đaminh Phan Long", 
                     "Trưởng Anna Trần Annie", 
                     "Trưởng Maria Nguyễn Hằng", 
-                    "Trưởng ThêrêsaVỗ Vivian",
+                    "Trưởng Thêrêsa Vỗ Vivian",
                     "Trưởng Maria Phạm Vi",
                     "Trưởng Giuse Đoàn Đức",
                     "Trưởng Giuse Đoàn Charles Trí", 
                     "Trưởng Dominico Bùi Dennis", 
                     "Trưởng Giuse Nguyễn Thanh Anh Khoa"];
-      var HT_Info = ["Cha Tuyên Úy","Sơ Tuyên Úy","Đoàn Trưởng", "Đoàn Phó Quảng Trị", "Đoàn Phó Nghiên Huấn", "Thư Ký", "Thủ Qũy", "Ngành Trưởng Ngành Ấu",
-            "Ngành Trưởng Ngành Thiếu","Ngành Trưởng Ngành Nghĩa", "Ngành Trưởng Hiệp Sỹ", "Website Developer", "Website Developer"];
-      var HT_pic = ["images/IMG_7643.jpg","images/DSC_0430.jpg","images/DSC_0040.jpg","images/DSC_0179.jpg","images/Anh-David.jpg",
-            "images/DSC_0077.jpg","images/IMG_8113.jpg","images/IMG_7948.jpg","images/DSC_0777.jpg","images/DSC_0306.jpg",
-            "images/Tr Tri-1.jpg","images/DSC_0094.jpg","images/DSC_0071.jpg"];
-      var HT_fone = ["###-###-####","###-###-####","###-###-####", "###-###-####", "###-###-####", "###-###-####", "###-###-####", "###-###-####",
-            "###-###-####","###-###-####", "###-###-####", "dennisbuioff@gmail.com", "henrykhoanguyen@gmail.com"];
+
+      var HT_Info = ["Cha Tuyên Úy",
+                    "Sơ Tuyên Úy",
+                    "Đoàn Trưởng",
+                    "Đoàn Phó Quảng Trị",
+                    "Đoàn Phó Nghiên Huấn",
+                    "Thư Ký",
+                    "Thủ Qũy",
+                    "Ngành Trưởng Ngành Ấu",
+                    "Ngành Trưởng Ngành Thiếu",
+                    "Ngành Trưởng Ngành Nghĩa",
+                    "Ngành Trưởng Hiệp Sỹ",
+                    "Website Developer",
+                    "Website Developer"];
+
+      var HT_pic = ["images/.jpg", //Cha Tuyen Uy
+                    "images/.jpg", //So Tuyen Uy
+                    "images/ChiLe.jpg", //Doan Truong
+                    "images/ChiLucy.jpg", //Doan Pho QT
+                    "images/.jpg", //Doan Pho NH
+                    "images/DSC_0354.jpg", //Thu Ky
+                    "images/ChiHang.jpg", //Thu Quy
+                    "images/ChiVivian.jpg", //AU
+                    "images/.jpg", //THIEU
+                    "images/AnhDuke.jpg", //NGHIA
+                    "images/AnhCharles.jpg", //HIEP SI
+                    "images/DSC_0094.jpg", //DENNIS
+                    "images/DSC_0071.jpg"]; //KHOA
+
+      var HT_fone = ["408-363-2300 (ask for Father Anthony)",
+                    "408-363-2300 (ask for Sister Yen)",
+                    "408-387-9783<br>ngocleluu@gmail.com", 
+                    "lucianguyen91@gmail.com", 
+                    "longphan68@yahoo.com", 
+                    "annieotran@yahoo.com", 
+                    "mhnguyen512@yahoo.com", 
+                    "###-###-####",
+                    "###-###-####",
+                    "###-###-####", 
+                    "ctrid22@hotmail.com", 
+                    "dennisbuioff@gmail.com", 
+                    "henrykhoanguyen@gmail.com"];
 
       var image = document.getElementById('pic');
       document.getElementById("info").innerHTML = HT_Info[num];
