added nganh truong and pho info

--- a/About_Us.html
+++ b/About_Us.html
@@ -184,6 +184,10 @@
             Dưới bóng cờ, em mang Chúa cho tuổi Ấu thơ.
             <br></br>
             Seedling is a group consisted of fledging members between the ages of seven to ten years old. Generally, the boys and girls at these ages are active, inquisitive, and fond of nature. The members wear the green scarf, the verdant color of a young wheatling, to symbolize their innocence and youthfulness. Like the wheat in the field blowing with the wind, the youth members are easily adaptable to new situations and receptive to new ideas. The group’s model is the young and obedient Jesus to his parents. The members learn and practice obedience to God's will through the daily responsibility: praising God for many blessings, obeying their parents and teachers, helping and loving others.</p>
+            <p>
+              <b>Ngành Trưởng: Trưởng Võ Vivian | Email: vivian_vo95@yahoo.com<br>
+                Ngành Phó: Trưởng Đoàn Christina | Email: christinatdoan@yahoo.com</b>
+            </p>
             <a href="#avatar" style="color:#57A94F;">Back to Avatar</a>
         </div>
       </div>
@@ -214,6 +218,10 @@
           Gian khổ nguy khó chớ nao vui mang Chúa đến cho người.
           </p>
           <p>Search is a group consisted of pre-adolescent youths between the ages of eleven and thirteen. Generally, the members during these ages are becoming more aware of their physical and emotional changes. During this transitional period into young adults, they are confused and ambivalent to set rules imposed by authority figures. They are searching for their own identity and the rationality of their existence. Consequently, this nameless quest affects their spiritual beings as well. The members wear the navy blue scarves which symbolizes their unfathomed uniqueness and identity with a great hope of life and society. The scriptural model for the group is based on Jesus' hidden and evangelical life. Like Jesus, who was patiently praying for a deeper knowledge of his mission, they must find who they are in the solitude of prayer. Imitating Jesus, who was willing to fulfill the Father's wills, the will learn to accept who they are with gratitude. The members' natural inclination to reason and question abstract thoughts and concepts is now integrated into their development through concrete apostolate works.</p>
+          <p>
+            <b>Ngành Trưởng: Trưởng Phạm Vi | Email: vipham229@yahoo.com<br>
+              Ngành Phó: Trưởng Đinh Trang | Email: </b>
+          </p>
           <a href="#avatar">Back to Avatar</a>
         </div>
       </div>
@@ -253,6 +261,10 @@
               Xông pha lên đường làm chứng Phúc Âm.
             </p>
             <p>Companion is a group consisted of adolescents between the ages of fourteen and seventeen. The adolescents at these ages begin to consolidate their emerging values and beliefs. They start to formalize their own identity and group dynamic. The basic needs to love and be loved, to understand and be understood become the beginning for friendship and cooperation among the members. Thus, the canary yellow scarf wore by the members symbolizes the sunrise of the youths before coming into their adult ages and the manifestation of the heart; the opening of one's life to others. While the evangelized Jesus is still the primary spiritual mode, Saint Paul is adopted by the members as their inspiring patron figure. Like Saint Paul, who became Christ's zealous disciple after his spiritual lightning conversion on the way to Damascus, the members constantly seek for God's will and conversion of hearts. In addition, the members are encouraged to familiarize with communal apostolate and to live out the spirit of charity and generosity. (Corinthian 13: 1-13)</p>
+            <p>
+              <b>Ngành Trưởng: Trưởng Đoàn Đức | Email: mrducdoan@gmail.com<br>
+                Ngành Phó: Trưởng Trần Thái | Email: </b>
+            </p>
             <a href="#avatar" style="color:#C6BA28;">Back to Avatar</a>
           </div>
         </div>
@@ -280,6 +292,10 @@
               Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
             </p>
             <p>Knights of the Eucharist is a group consisted of young adults between the ages of 16 and 17 years old. As unique individuals with specialized gifts and talents, each member is invited to live a noble live and serve others with charity and humility. The Knights of the Eucharist members wear on them the brown scarf symbolizes the hard work and dedication to serve God. With the slogan of the group is, Dấn Thân, plunging headlong into the world, the knights are invited to participate in the mission of becoming the salt and light for the world. They are constantly reminded to generously commit to serve the church and the country.</p>
+            <p>
+              <b>Ngành Trưởng: Trưởng Đoàn Charles Trí | Email: ctrid22@hotmail.com<br>
+                Ngành Phó: Trưởng | Email: </b>
+            </p>
             <a href="#avatar" style="color:#956D4F;">Back to Avatar</a>
           </div>
         </div>
@@ -318,7 +334,7 @@
         </div>
         <div class="column">
           <h3>Rước Lễ</h3>
-          <p><img src="images/communion.png" alt="Chalice"></p>
+          <p><img src="images/Communion.png" alt="Chalice"></p>
         </div>
         <div class="column">
           <h3>Hy Sinh</h3>
