modified contact and index

--- a/Contacts.html
+++ b/Contacts.html
@@ -187,8 +187,8 @@
                     "images/.jpg", //So Tuyen Uy
                     "images/ChiLe.jpg", //Doan Truong
                     "images/ChiLucy.jpg", //Doan Pho QT
-                    "images/.jpg", //Doan Pho NH
-                    "images/DSC_0354-1.jpg", //Thu Ky
+                    "images/AnhLong.jpg", //Doan Pho NH
+                    "images/ChiAnnie.jpg", //Thu Ky
                     "images/ChiHang.jpg", //Thu Quy
                     "images/ChiVivian.jpg", //AU
                     "images/.jpg", //THIEU
