--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
 
             <button class="accordion">Calendars</button>
             <div class="panel">
-              <p style="text-align:left;">Ngày sinh hoạt (Sinh Hoạt Date):<br>9-17-2016<br>9-24-2016<br>10-1-2016<br>10-8-2016<br>10-15-2016: Phụ Huynh Meeting<br>10-22-2016: Last Day of Registration<br>10-29-2016<br>11-5-2016: Lễ Bổn Mạng thứ 35!!!<br>...<a href="Calendars.html" target="_blank"> see more</a></p>
+              <br><p style="text-align:left;">Ngày sinh hoạt (Sinh Hoạt Date):<br>9-17-2016<br>9-24-2016<br>10-1-2016<br>10-8-2016<br>10-15-2016: Phụ Huynh Meeting<br>10-22-2016: Last Day of Registration<br>10-29-2016<br>11-5-2016: Lễ Bổn Mạng thứ 35!!!<br>...<a href="Calendars.html" target="_blank"> see more</a></p><br>
             </div>
 
-            <button class="accordion">Section 4</button>
+            <button class="accordion">VSL Nhóm Múa Lân - Our Lion Dance Crews</button>
             <div class="panel">
-              <p style="text-align:left;">Lorem ipsum...</p>
+              <br><p style="text-align:left;">Booking: Tâm Lê ###-###-####<br>For more info and pictures...<a href=""> see more</a></p><br>
             </div>
 
             <button class="accordion">Our Social Media</button>
