verified site to be on search engine

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="width=device-width, IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="google-site-verification" content="8Jf7-CoIIVUsN1uOuC9lw67puDdMkLCCWo0Y1eA-uOI"/>
 
   <!-- Site Properties -->
   <title>Đoàn Thiếu Nhi Thánh Thể Vinh Sơn Liêm</title>
@@ -157,7 +158,11 @@
 
             <button class="accordion">VSL Nhóm Múa Lân - Our Lion Dance Crews</button>
             <div class="panel">
-              <br><p style="text-align:left;">Booking: Tâm Lê ###-###-####<br>For more info and pictures...<a href=""> see more</a></p><br>
+              <br><b><p style="text-align:left; font-size: 1.5em;">Booking:</b><br></p>
+              <p style="text-align:left;">
+              <b>Primary:</b><br>Anh David Ngô<br>408-623-9722<br>dtd1vad017@yahoo.com<br><br>
+              <b>Secondary:</b><br>Anh Tâm Lê<br>408-384-2293<br><br>
+            </p>
             </div>
 
             <button class="accordion">Our Social Media</button>
@@ -172,6 +177,7 @@
                 <img src="images/instagram.svg" alt="TNTT Instagram Page" class="ui avatar image" id="followlink">
               </a>
             </div>
+
           </div>
         </div>
       </div>
