--- a/About_Us.html
+++ b/About_Us.html
@@ -263,7 +263,7 @@
             <p>Companion is a group consisted of adolescents between the ages of fourteen and seventeen. The adolescents at these ages begin to consolidate their emerging values and beliefs. They start to formalize their own identity and group dynamic. The basic needs to love and be loved, to understand and be understood become the beginning for friendship and cooperation among the members. Thus, the canary yellow scarf wore by the members symbolizes the sunrise of the youths before coming into their adult ages and the manifestation of the heart; the opening of one's life to others. While the evangelized Jesus is still the primary spiritual mode, Saint Paul is adopted by the members as their inspiring patron figure. Like Saint Paul, who became Christ's zealous disciple after his spiritual lightning conversion on the way to Damascus, the members constantly seek for God's will and conversion of hearts. In addition, the members are encouraged to familiarize with communal apostolate and to live out the spirit of charity and generosity. (Corinthian 13: 1-13)</p>
             <p>
               <b>Ngành Trưởng: Trưởng Đoàn Đức | Email: mrducdoan@gmail.com<br>
-                Ngành Phó: Trưởng Trần Thái | Email: </b>
+                Ngành Phó: Trưởng Trần Thái | Email: pttran@ucdavis.edu</b>
             </p>
             <a href="#avatar" style="color:#C6BA28;">Back to Avatar</a>
           </div>
@@ -293,8 +293,7 @@
             </p>
             <p>Knights of the Eucharist is a group consisted of young adults between the ages of 16 and 17 years old. As unique individuals with specialized gifts and talents, each member is invited to live a noble live and serve others with charity and humility. The Knights of the Eucharist members wear on them the brown scarf symbolizes the hard work and dedication to serve God. With the slogan of the group is, Dấn Thân, plunging headlong into the world, the knights are invited to participate in the mission of becoming the salt and light for the world. They are constantly reminded to generously commit to serve the church and the country.</p>
             <p>
-              <b>Ngành Trưởng: Trưởng Đoàn Charles Trí | Email: ctrid22@hotmail.com<br>
-                Ngành Phó: Trưởng | Email: </b>
+              <b>Ngành Trưởng: Trưởng Đoàn Charles Trí | Email: ctrid22@hotmail.com<br></b>
             </p>
             <a href="#avatar" style="color:#956D4F;">Back to Avatar</a>
           </div>
@@ -334,7 +333,7 @@
         </div>
         <div class="column">
           <h3>Rước Lễ</h3>
-          <p><img src="images/Communion.png" alt="Chalice"></p>
+          <p><img src="images/communion.png" alt="Chalice"></p>
         </div>
         <div class="column">
           <h3>Hy Sinh</h3>
