--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="8Jf7-CoIIVUsN1uOuC9lw67puDdMkLCCWo0Y1eA-uOI"/>
 
   <!-- Site Properties -->
-  <title>Đoàn Thiếu Nhi Thánh Thể Vinh Sơn Liêm</title>
+  <title>TNTT Vinh Sơn Liêm</title>
   <link rel="stylesheet" type="text/css" href="dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="dist/components/site.css">
 
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="column">
-          <h3>Thiếu Nhi Of The Month</h3>
+          <h3>Thiếu Nhi Of The Year</h3>
           <p><b>Congratulation!</b></p>
           <div align="center">
             <img src="images/DSC_0908.jpg" alt="Ấu of The Month" class="ui large bordered rounded image">
@@ -144,16 +144,9 @@
               <br>
             </div>
 
-            <button class="accordion">New Year New Me!</button>
-            <div class="panel">
-              <br>
-              <p style="text-align:left;">Một mùa hè nữa lại trôi qua và năm học mới sắp bắt đầu, các em thiếu nhi đã chuẩn bị gì cho năm học mới rồi?<br>Đoàn Thiếu Nhi Thánh Thể Vinh Sơn Liêm chào mừng phụ huynh và các em quay lại với một mùa sinh hoạt mới, vui nhộn, và đầy hồng ân Thiên Chúa.<br>Ngày sinh hoạt đầu tiên (First Day of Sinh Hoạt): 9-17-2016<br><b>Ngày cuối để ghi danh (Last Day of Registration): 10-22-2016</b><br><b>Lễ Bổn Mạng 35 Đoàn Thiếu Nhi Vinh Sơn Liêm: 11-5-2016</b><br><br>ARE YOU EXCITED, CÁC EM? :D</p>
-              <br>
-            </div>
-
             <button class="accordion">Calendars</button>
             <div class="panel">
-              <br><p style="text-align:left;">Ngày sinh hoạt (Sinh Hoạt Date):<br>10-1-2016<br>10-8-2016<br>10-15-2016: Phụ Huynh Meeting<br>10-22-2016: Last Day of Registration<br>10-29-2016<br>11-5-2016: Lễ Bổn Mạng thứ 35!!!<br>11-12-2016<br>11-19-2016: Đoàn Thanhsgiving Retreat<br>...<a href="Calendars.html" target="_blank"> see more</a></p><br>
+              <br><p style="text-align:left;">Ngày sinh hoạt (Sinh Hoạt Date):<br>11-5-2016: Lễ Bổn Mạng thứ 35!!!<br>11-12-2016<br>11-19-2016<br>11-26-2016: NO Sinh Hoạt<br>12-3-2016<br>12-10-2016<br>12-17-2016<br>...<a href="Calendars.html" target="_blank"> see more</a></p><br>
             </div>
 
             <button class="accordion">VSL Nhóm Múa Lân - Our Lion Dance Crews</button>
