nganh pages are done

--- a/Contacts.html
+++ b/Contacts.html
@@ -172,7 +172,7 @@
       var HT_Info = ["Cha Tuyên Úy",
                     "Sơ Trợ Úy",
                     "Đoàn Trưởng",
-                    "Đoàn Phó Quảng Trị",
+                    "Đoàn Phó Quản Trị",
                     "Đoàn Phó Nghiên Huấn",
                     "Thư Ký",
                     "Thủ Qũy",
@@ -185,13 +185,13 @@
 
       var HT_pic = ["images/ChaCuong.jpg", //Cha Tuyen Uy
                     "images/SoYen.jpg", //So Tuyen Uy
-                    "images/ChiLe.jpg", //Doan Truong
+                    "images/DSC_0077.jpg", //Doan Truong
                     "images/ChiLucy.jpg", //Doan Pho QT
                     "images/AnhLong.jpg", //Doan Pho NH
                     "images/ChiAnnie.jpg", //Thu Ky
                     "images/ChiHang.jpg", //Thu Quy
                     "images/ChiVivian.jpg", //AU
-                    "images/ChiVi.jpg", //THIEU
+                    "images/DSC_0388.jpg", //THIEU
                     "images/AnhDuke.jpg", //NGHIA
                     "images/AnhCharles.jpg", //HIEP SI
                     "images/DSC_0094.jpg", //DENNIS
