--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <h3>Photo Gallery</h3>
           <p>For more pictures like this one <a href="https://www.facebook.com/TNTT-Vinh-S%C6%A1n-Li%C3%AAm-249522558412572/photos" target="blank">click here </a> </p>
           <div align="center">
-          <img src="images/IMG_7934.jpg" class="ui large bordered rounded image">
+          <img src="images/DSC_0655.jpg" class="ui large bordered rounded image">
           </div>
         </div><!--End of Column Class Div-->
 
@@ -142,15 +142,7 @@
             <button class="accordion">Calendars</button>
             <div class="panel">
               <br><p style="text-align:left;">
-                Ngày sinh hoạt (Sinh Hoạt Date):
-                <br>11-5-2016: Lễ Bổn Mạng thứ 35!!!
-                <br>11-12-2016
-                <br>11-19-2016
-                <br>11-26-2016: NO Sinh Hoạt
-                <br>12-3-2016
-                <br>12-10-2016
-                <br>12-17-2016
-                <br>...<a href="Calendars.html" target="_blank"> see more</a>
+                <a href="Calendars.html" target="_blank"> click here to see calendar </a>
               </p>
               <br>
             </div><!--End of Panel Class Div-->
@@ -165,16 +157,16 @@
             </div><!--End of Panel Class Div-->
 
 
-            <button class="accordion">Ngành Updates - UNDERCONTRUCTION<br><br>(CÒN TRONG QUÁ TRÌNH XÂY DỰNG)</button>
+            <button class="accordion">Ngành Updates - Ngành Cập Nhật</button>
             <div class="panel">
               <p style="color:#BEBEBE;">Latest Updates for Each Ngành!</p>
-              <a href="" target="blank">
+              <a href="NGANHs/AuPage.html" target="blank">
                 <img src="images/HT-Au.png" alt="Ngành Ấu Page" class="ui avatar image" id="nganhAu">
               </a>
-              <a href="" target="blank">
+              <a href="NGANHs/ThieuPage.html" target="blank">
                 <img src="images/HT-Thieu.png" alt="Ngành Thiếu Page" class="ui avatar image" id="nganh">
               </a>
-              <a href="" target="blank">
+              <a href="NGANHs/NghiaPage.html" target="blank">
                 <img src="images/HT-NghiaBoi.png" alt="Ngành Nghĩa Page" class="ui avatar image" id="nganh">
               </a>
             </div><!--End of Panel Class Div-->
