--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <button class="accordion"><b style="color:red">Doan Camp Permission Slip</b></button>
             <div class="panel">
               <br>
-                <li style="text-align:left; font-size:1.25em;">View <a href="PDF/DOAN_CAMP_PERMISSION_SLIPS_2018.jpeg" target="_blank">form</a></li><br>-->
+                <li style="text-align:left; font-size:1.25em;">View <a href="PDF/DOAN_CAMP_PERMISSION_SLIPS_2018.jpeg" target="_blank">form</a></li><br>
                 <li style="text-align:left; font-size:1.25em;">Download <a href="PDF/DOAN_CAMP_PERMISSION_SLIPS_2018.jpeg" download>here</a></li>
               <br>
             </div><!--End of Panel Class Div-->
