took out Contacts page and updated registration

--- a/About_Us.html
+++ b/About_Us.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" type="text/css" href="dist/components/icon.css">
   <link rel="stylesheet" type="text/css" href="dist/components/sidebar.css">
   <link rel="stylesheet" type="text/css" href="dist/components/transition.css">
-  
+
   <link rel="stylesheet" type="text/css" href="About_Us.css">
   <link rel="icon" href="images/VSL_LOGO.png">
 
@@ -68,7 +68,7 @@
     <a class="item" href="index.html">Home</a>
     <a class="active item">About Us</a>
     <a class="item" href="Calendars.html">Calendars</a>
-    <a class="item" href="Contacts.html">Contacts</a>
+    <!--<a class="item" href="Contacts.html">Contacts</a>-->
     <a class="item" href="Resources.html">Resources</a>
     </div>
   </div>
@@ -92,7 +92,7 @@
         <a class="toc item" style="color: black !important; margin-left: 10em;">
           <i class="sidebar icon"></i>
         </a>
-        
+
         <div class="right item">
         <a class="item" href="index.html" style="color: black !important;">Home</a>
         <a class="active item" style="color: black !important; border-color: black;">About Us</a>
@@ -121,7 +121,7 @@
         <div class="eight wide column">
           <div class="ui piled segment">
           <h3 class="ui header">Who is Saint Vinh Son Liem?</h3>
-          <p>Vicente Liem de la Paz (Vietnamese: Vinh Sơn Lê Quang Liêm) (1732 – November 7, 1773) was a Tonkinese (present day northern Vietnam) Dominican friar venerated as a saint and martyr (someone who died for the sake of their religion) by the Roman Catholic Church. He was born at Tra-lu, Tonkin in 1732 to Antonio and Monica Daeon de la Cruz, members of the Tonkinese nobility. When he fell gravely ill several days after his birth, he was baptized by Fr. Chien de Santo Tomas, taking the name of Vicente Liem de la Paz. Since Tra-lu was one of those Tonkinese villages where Dominican friars preached the Catholic faith, Liem grew up to be a Christian. He was later brought by his parents to a missionary center where he learned catechism... 
+          <p>Vicente Liem de la Paz (Vietnamese: Vinh Sơn Lê Quang Liêm) (1732 – November 7, 1773) was a Tonkinese (present day northern Vietnam) Dominican friar venerated as a saint and martyr (someone who died for the sake of their religion) by the Roman Catholic Church. He was born at Tra-lu, Tonkin in 1732 to Antonio and Monica Daeon de la Cruz, members of the Tonkinese nobility. When he fell gravely ill several days after his birth, he was baptized by Fr. Chien de Santo Tomas, taking the name of Vicente Liem de la Paz. Since Tra-lu was one of those Tonkinese villages where Dominican friars preached the Catholic faith, Liem grew up to be a Christian. He was later brought by his parents to a missionary center where he learned catechism...
           <a href="http://www.vincentliem.com/?p=40" target="blank"> see more </a></p>
         </div>
         </div>
@@ -208,7 +208,7 @@
     </section>
     <div id="strip2">
       <div align="center">
-        <div class="alignment">      
+        <div class="alignment">
           <p>Em Thiếu Nhi ơi, như ngàn tia sáng huy hoàng,
           <br></br>
           Vào buổi rạng đông đến mang nguồn hơi ấm.
@@ -233,7 +233,7 @@
           <a href="#avatar">Back to Avatar</a>
         </div>
       </div>
-    </div> 
+    </div>
 
     <section id="nghia-stop">
       <div class="title-img" style="background: url('images/DSC_0350.jpg') 50% 0 repeat fixed; background-position: bottom;">
@@ -242,7 +242,7 @@
     </section>
      <div id="strip3">
         <div align="center">
-          <div class="alignment">  
+          <div class="alignment">
             <p>
               Vui ca lên Nghĩa sĩ đời đầy diễm phúc, hồn thanh xuân say niềm lý tưởng cao xa.
               <br></br>
@@ -285,7 +285,7 @@
     </section>
      <div id="strip4">
         <div align="center">
-          <div class="alignment"> 
+          <div class="alignment">
             <p>
               Hiệp Sĩ, tiến bước vào đời. Thánh Thể Giêsu, lấy làm nguồn sống.
               <br></br>
@@ -361,7 +361,7 @@
   </div>
 
 </div><!-- END OF PUSHER -->
-    
+
   <script src="dist/components/arrowup.js"></script>
 
 </body>
