--- a/Calendars.html
+++ b/Calendars.html
@@ -69,7 +69,7 @@
     <a class="item" href="index.html">Home</a>
     <a class="item" href="About_Us.html">About Us</a>
     <a class="active item">Calendars</a>
-    <a class="item" href="Contacts.html">Contacts</a>
+    <!--<a class="item" href="Contacts.html">Contacts</a>-->
     <a class="item" href="Resources.html">Resources</a>
     </div>
   </div>
@@ -93,7 +93,7 @@
         <a class="toc item" style="color:black !important; margin-left: 10em;">
           <i class="sidebar icon"></i>
         </a>
-        
+
         <div class="right item">
           <a class="item" href="index.html" style="color: black !important;">Home</a>
           <a class="item" href="About_Us.html" style="color: black !important;">About Us</a>
@@ -115,7 +115,7 @@
 
   <div class="spacex"> </div>
   <br></br>
-  <div align="center"> 
+  <div align="center">
     <iframe src="https://calendar.google.com/calendar/embed?title=TNTT%20Vinh%20Son%20Liem%20Calendar&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=buischolly%40gmail.com&amp;color=%23B1365F&amp;ctz=America%2FLos_Angeles" id="calendar" frameborder="0" scrolling="yes"></iframe>
   </div>
 <!-- FOOTER OF COPYRIGHT FRAGMENT -->
