--- a/Resources.html
+++ b/Resources.html
@@ -81,20 +81,20 @@
   <a class="item" href="index.html">Home</a>
   <a class="item" href="About_Us.html">About Us</a>
   <a class="item" href="Calendars.html">Calendars</a>
-  <a class="item" href="Contacts.html">Contacts</a>
+  <!--<a class="item" href="Contacts.html">Contacts</a>-->
   <a class="active item">Resources</a>
 </div>
 
 <!-- Page Contents -->
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment" style="padding-top: 0em;">
-  <a href="index.html"><img src="images/VSLOGO2.png" class="logo"></a> 
+  <a href="index.html"><img src="images/VSLOGO2.png" class="logo"></a>
     <div class="ui container" style="opacity: .7; background-color: white; margin-left: 0 !important; margin-right: 0 !important;">
       <div class="ui large secondary inverted pointing menu">
         <a class="toc item" style="color: black !important; margin-left: 10em;">
           <i class="sidebar icon"></i>
         </a>
-        
+
         <div class="right item">
           <a class="item" href="index.html" style="color: black !important;">Home</a>
           <a class="item" href="About_Us.html" style="color: black !important;">About Us</a>
@@ -205,7 +205,7 @@
                   "<br><b>Phong Trào Thiếu Nhi Thánh Thể Việt Nam tại Hoa Kỳ:</b><br>" + "<a href='http://www.tntt.org/' target='_blank'>Trung Ương</a><br>" +
                   "<a href='https://www.facebook.com/mientay.pttnttvnhk' target='_blank'>Miền Tây</a><br>" +
                   "<a href='http://www.tntt.org/regions/' target='_blank'>Other Regions</a><br>" +
-                  "<br><b>Các Đoàn Bạn Trong Miền Tây:</b><br>" + "<a href='http://doan-tmt.org/' target='_blank'>Đoàn Tôma Thiện - (408) 291-6280</a><br>" + 
+                  "<br><b>Các Đoàn Bạn Trong Miền Tây:</b><br>" + "<a href='http://doan-tmt.org/' target='_blank'>Đoàn Tôma Thiện - (408) 291-6280</a><br>" +
                   "<a href='http://www.ducmelavangparish.org/hoi_doan/tntt_dunglac.html' target='_blank'>Đoàn Anrê Dũng Lạc San Jose - (408) 291-6280</a></br>" +
                   "<a href='https://www.facebook.com/tntt.thd' target='_blank'>Đoàn Têrêsa Hài Đồng Giêsu - (408) 729-0101</a><br>" +
                   "<a href='https://www.facebook.com/ktvsac' target='_blank'>Đoàn Kitô Vua Sacramento - (916) 383-4276</a>" +
