fixed target tag

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<p>Built by HTML and CSS.
 								<br/><u>Purpose:</u> A mean of communication between youth’s parents and youth leaders.
 								<br/><a href="http://vsl-tntt.org/" target="_blank">Website</a>&ensp;
-								<a href="https://github.com/vsl-tntt/vsl-tntt.github.io">Source Code</a>
+								<a href="https://github.com/vsl-tntt/vsl-tntt.github.io" target="_blank">Source Code</a>
 								</p>
 							</article>
 
@@ -65,7 +65,7 @@
 								<p>Built using a free HTML template from <a href="https://html5up.net">HTML5 UP</a>
 								<br/><u>Purpose:</u> To promote AI club at UCI and to connect our club with students and companies.
 								<br/><a href="https://aiclub.ics.uci.edu/" target="_blank">Website</a>&ensp;
-								<a href="https://github.com/aiatuci/aiatuci.github.io">Source Code</a>
+								<a href="https://github.com/aiatuci/aiatuci.github.io" target="_blank">Source Code</a>
 								</p>
 							</article>
 
