--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<a href="index.html" class="image avatar"><img src="images/DSC_0622.jpg" alt="" /></a>
 					<h1><strong>I am Khoa Nguyen</strong><br />
 					a Machine Learning Enthusiast<br />
-					a Software Developer<br /> a Photographer</a>.</h1>
+					a Software Developer<br /> a Photographer</a></h1>
 				</div>
 			</header>
 
@@ -32,7 +32,7 @@
 						<header class="major">
 							<h2>Introduction</h2>
 						</header>
-						<p>I'm currently a fifth year student at University of California, Irvine.<br/>I am experienced in object-oriented programming; developing, testing, and debugging code.
+						<p>I'm currently a student at University of California, Irvine.<br/>I am experienced in object-oriented programming; developing, testing, and debugging code.
 							I adapt quickly to new environment, a quick learner, excellent communicator, and a team player.
 							<br/><strong>Programming Languages:</strong> C, C++, Java, Python, HTML, and CSS.
 							<br/><strong>Database: </strong>MySQL.
