--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<a href="index.html" class="image avatar"><img src="images/DSC_0622.jpg" alt="" /></a>
 					<h1><strong>I am Khoa Nguyen</strong><br />
 					a Machine Learning Enthusiast<br />
-					a Software Developer<br /> a Photographer</a></h1>
+					a Software Developer<br /> a Photographer</h1>
 				</div>
 			</header>
 
