update project and resume

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/DSC_0622.jpg" alt="" /></a>
 					<h1><strong>I am Khoa Nguyen</strong><br />
-					a Machine Learning Enthusiast<br />
 					a Software Developer<br /> a Photographer</h1>
 				</div>
 			</header>
@@ -49,8 +48,29 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/vsl.png" class="image fit thumb"><img src="images/vsl.png" alt="" /></a>
+								<a href="https://us-spotify-browser.herokuapp.com/" target="_blank" class="image fit thumb"><img src="images/spotifybrowser.png" alt="" /></a>
+								<h3>Spotify API Web Browser</h3>
+								<p>Built with Angular, Node/Express, Spotify API.
+								<br/><u>Purpose:</u> A website that allows user to search for music and display user’s top 10 artists, top 10 songs, etc... 
+								<br/><a href="https://us-spotify-browser.herokuapp.com/" target="_blank">Website</a>&ensp;
+								<a href="https://github.com/henrykhoanguyen/SpotifyBrowser" target="_blank">Source Code</a>
+								</p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://german-futball.herokuapp.com/" target="_blank" class="image fit thumb"><img src="images/germanfutball.jpg" alt="" /></a>
+								<h3>German Football Data Analyzer</h3>
+								<p>Built with Angular, Node/Express, MongooseDB.
+								<br/><u>Purpose:</u> Display data of each team’s season performance.
+								<br/><a href="https://german-futball.herokuapp.com/" target="_blank">Website</a>&ensp;
+								<a href="https://github.com/henrykhoanguyen/german_football" target="_blank">Source Code</a>
+								</p>
+							</article>
+							
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="http://vsl-tntt.org/" target="_blank" class="image fit thumb"><img src="images/vsl.png" alt="" /></a>
 								<h3>Youth Group's Website</h3>
 								<p>Built by HTML and CSS.
 								<br/><u>Purpose:</u> A mean of communication between youth’s parents and youth leaders.
@@ -71,7 +91,7 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/KCSE.png" class="image fit thumb"><img src="images/KCSE.png" alt="" /></a>
-								<h3>Simple Search Engine</h3>
+								<h3>Search Engine</h3>
 								<p>Built by Python and Flask framework
 								<br/><u>Purpose:</u>  To understand TF-IDF (term frequency–inverse document frequency)
 								and use it to rank websites.
@@ -81,7 +101,7 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/notNetflix.png" class="image fit thumb"><img src="images/notNetflix.png" alt="" /></a>
-								<h3>NotNetflix E-commercial Website</h3>
+								<h3>E-commercial Movies Website</h3>
 								<p>Built by Java, JavaScript, jQuery, MySQL
 								<br/><u>Purpose:</u>  To learn how to build and host a dynamic e-commerce website on Apache Tomcat server
 								that use MySQL database to store and retrieve information.
