fixed up portfolio and resume

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Khoa Nguyen - Programmer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="keywords" content="Khoa Nguyen, Henry Khoa Nguyen, engineer, software, developer, resume, website, designer, application"/>
+		<meta name="description" content="Khoa Nguyen's portfolio - Software Developer">
+		<meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
+    <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="A software engineer">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/ksign.png">
 	</head>
@@ -18,8 +19,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/DSC_0622.jpg" alt="" /></a>
-					<h1><strong>I am Khoa Nguyen</strong><br />
-					a Software Developer<br /> a Photographer</h1>
+					<h1><strong>I am Khoa Nguyen</strong><br/>
+						a Software Developer<br /> 
+						a Photographer</h1>
 				</div>
 			</header>
 
@@ -31,16 +33,14 @@
 						<header class="major">
 							<h2>Introduction</h2>
 						</header>
-						<p>I'm currently a student at University of California, Irvine.<br/>I am experienced in object-oriented programming; developing, testing, and debugging code.
-							I adapt quickly to new environment, a quick learner, excellent communicator, and a team player.
-							<br/><strong>Programming Languages:</strong> C, C++, Java, Python, HTML, and CSS.
-							<br/><strong>Database: </strong>MySQL.
-							<br/><strong>Frameworks & Libraries:</strong> Flask, Bootstrap.
-							<br/><strong>Tools: </strong>Visual Studio, Xcode, git, Adobe Photoshop, Illustrator, Lightroom.
+						<p>
+							<br/><strong>Programming Languages:</strong> C, C++, Java, Python, JavaScript, TypeScript, HTML, and CSS.
+							<br/><strong>Database: </strong>SQL, NoSQL.
+							<br/><strong>Technologies:</strong> Express/Node.JS, Angular Bootstrap, Visual Studio, Xcode, git, Adobe Photoshop, Illustrator, Lightroom.
 							<br/>
 						</p>
 						<ul class="actions">
-							<li><a href="Khoa_Nguyen_Resume.pdf" target="_blank" class="button">My Resume</a></li>
+							<li><a href="Khoa_Nguyen_Resume.pdf" target="_blank" class="button primary">My Resume</a></li>
 						</ul>
 					</section>
 
@@ -50,7 +50,7 @@
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://us-spotify-browser.herokuapp.com/" target="_blank" class="image fit thumb"><img src="images/spotifybrowser.png" alt="" /></a>
+								<a href="images/spotifybrowser.png" target="_blank" class="image fit thumb"><img src="images/spotifybrowser.png" alt="" /></a>
 								<h3>Spotify API Web Browser</h3>
 								<p>Built with Angular, Node/Express, Spotify API.
 								<br/><u>Purpose:</u> A website that allows user to search for music and display user’s top 10 artists, top 10 songs, etc... 
@@ -60,7 +60,7 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://german-futball.herokuapp.com/" target="_blank" class="image fit thumb"><img src="images/germanfutball.jpg" alt="" /></a>
+								<a href="images/germanfutball.jpg" target="_blank" class="image fit thumb"><img src="images/germanfutball.jpg" alt="" /></a>
 								<h3>German Football Data Analyzer</h3>
 								<p>Built with Angular, Node/Express, MongooseDB.
 								<br/><u>Purpose:</u> Display data of each team’s season performance.
@@ -70,7 +70,7 @@
 							</article>
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="http://vsl-tntt.org/" target="_blank" class="image fit thumb"><img src="images/vsl.png" alt="" /></a>
+								<a href="images/vsl.png" target="_blank" class="image fit thumb"><img src="images/vsl.png" alt="" /></a>
 								<h3>Youth Group's Website</h3>
 								<p>Built by HTML and CSS.
 								<br/><u>Purpose:</u> A mean of communication between youth’s parents and youth leaders.
@@ -125,7 +125,7 @@
 							</article>-->
 						</div>
 						<ul class="actions">
-							<li><a href="https://github.com/henrykhoanguyen" target="_blank" class="button">My Github</a></li>
+							<li><a href="https://github.com/henrykhoanguyen" target="_blank" class="button primary">My Github</a></li>
 						</ul>
 					</section>
 
@@ -237,7 +237,7 @@
 						<li><a href="mailto:henrykhoanguyen@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Khoa Nguyen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="https://henrykhoanguyen.com">&copy; Khoa Nguyen 2020</a></li>
 					</ul>
 				</div>
 			</footer>
